--- a/src/sass/postwrapper.scss
+++ b/src/sass/postwrapper.scss
@@ -38,6 +38,10 @@
             }
         }
 
+        @include media-breakpoint-up(xs) {
+            font-size: 1.2em;
+        }
+
         @include media-breakpoint-up(lg) {
             font-size: 2.7em;
         }
